[package]
name = "ltbrfm-player"
version = "0.2.2"
description = "LTBR·FM Receiver — cross-platform Icecast radio player with graphic EQ and spectrum analyser"
authors = ["LTBR·FM"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "ltbrfm_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ltbrfm-player"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio engine
symphonia = { version = "0.5.4", default-features = false, features = ["mp3"] }
cpal = "0.15"
rubato = "0.15"
rustfft = "6"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
ringbuf = "0.4"

# Same gtk-rs minor as tauri's own Linux stack (tao 0.35 pins 0.18) — a
# version mismatch here would produce two incompatible gdk type families.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
